fix sponsor vertical align

--- a/html/assets/sass/style.scss
+++ b/html/assets/sass/style.scss
@@ -19,13 +19,13 @@ $open_sans: 'Open Sans', sans-serif;
 .btn-place{
     text-align: center;
     padding: 30px;
-    
+
     .btn-tr{
         background: transparent;
         font-family: $open_sans !important;
         font-weight: 300;
     }
-    
+
     .btn-orange{
         border: solid 1px $orange_bright;
         color: $orange_bright;
@@ -35,7 +35,7 @@ $open_sans: 'Open Sans', sans-serif;
             color: $orange_yellow;
         }
     }
-    
+
     .btn-blue-light{
         border: solid 1px $blue_light;
         color: $blue_light;
@@ -51,6 +51,11 @@ ul{
     margin: 0px;
     padding: 0px;
 }
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
 /* global style*/
 
 #top-nav{
@@ -64,7 +69,7 @@ ul{
     border-bottom: solid 3px $blue_dark;
     margin-bottom: 0px;
     font-family: $roboto;
-    
+
     .navbar-brand{
         height: auto;
         padding: 8px 15px;
@@ -96,11 +101,11 @@ header{
         background-position: center center;
         background-size: cover;
     }
-    
+
     h1, h4{
         text-align: center;
     }
-    
+
     h1{
         font-family: $roboto;
         font-size: 3.750em;
@@ -109,11 +114,11 @@ header{
         font-family: $roboto;
         font-size: 1.875em;
         font-weight: 300;
-        
+
         &.date-location{
             font-family: $open_sans;
             padding: 1.875em 0;
-            
+
             div{
                 &:first-child{
                     text-align: right;
@@ -125,13 +130,13 @@ header{
             }
         }
     }
-    
+
     #counter{
         .wing{
             margin-top: 10px;
             height: 3px;
             background: $white_color;
-            
+
             &:after{
                 content: '';
                 width: 100%;
@@ -142,7 +147,7 @@ header{
                 top: 6px;
             }
         }
-        
+
         .time{
             font-family: $roboto;
             font-size: 30px;
@@ -160,19 +165,19 @@ header{
 
 .wrap{
     padding: 2.50em 0px;
-    
+
     .title{
         font-family: $roboto;
         font-size: 2.250em;
-        
+
         .fa{
             color: $orange_bright !important;
         }
     }
-    
+
     .content{
         padding-left: 3.5em;
-        
+
         .y-video{
             padding: 0px 12% 3%;
             iframe{
@@ -196,17 +201,17 @@ header{
     .qty, fa, .qty-label{
         display: block !important;
     }
-    
+
     .qty{
         font-family: $roboto;
         font-size: 48px;
         font-weight: 400;
     }
-    
+
     .fa{
         color: $orange_yellow;
     }
-    
+
     .qty-label{
         font-family: $roboto;
         font-size: 18px;
@@ -219,7 +224,7 @@ header{
         margin-bottom: 20px;
         text-align: center;
         color: $text_gray_on_white;
-        
+
         .fa{
             color: $blue_dark;
         }
@@ -230,15 +235,15 @@ header{
     background: url(../img/12477555374_8c62f069bf_k.jpg) no-repeat;
     background-position: center center;
     background-size: cover;
-    
+
     .title{
         color: $white-color;
     }
-    
+
     .overlay{
         background-color: rgba(0,0,0,.75);
     }
-    
+
     h2{
         color: $orange_bright;
         font-family: $open_sans;
@@ -246,7 +251,7 @@ header{
         font-size: 24px;
         margin-bottom: 15px;
     }
-    
+
     //colors
 
     //@extend-elements
@@ -260,7 +265,7 @@ header{
         z-index: 1;
         //Instead of the line below you could use @includetransition($transition-1, $transition-2, $transition-3, $transition-4, $transition-5, $transition-6, $transition-7, $transition-8, $transition-9, $transition-10)
         transition: all 0.3s ease-out;
-        
+
         left: 2px;
     }
 
@@ -306,7 +311,7 @@ header{
             display: block;
             font-size: 16px;
         }
-        
+
         .title {
             color: $orange_bright;
             font-family: $open_sans;
@@ -392,7 +397,7 @@ header{
         height: 100%;
         display: block;
         position: absolute;
-        
+
         background: url(../img/unsplash_key_noteblog.jpg) no-repeat;
         background-size: auto 100%;
         background-position: center right;
@@ -402,10 +407,10 @@ header{
     .post-list{
         padding-top: 30px;
         padding-left: 60px;
-        
+
         .post{
             margin-bottom: 30px;
-            
+
             p{
                 color: $text_gray_on_white;
             }
@@ -417,7 +422,9 @@ header{
     .content{
         height: 100%;
         margin: 0 auto;
-        
+        &.first{
+          margin-top: 20px;
+        }
         &:before{
             content: '';
             display: inline-block;
@@ -427,7 +434,7 @@ header{
             margin-left: -0.25em;
         }
     }
-    
+
     .who {
         display: inline-block;
         vertical-align: middle;
@@ -436,23 +443,23 @@ header{
         font-weight: bold;
         font-family: $open_sans;
     }
-    
+
     .logos{
         >div{
             width: 20%;
             float: left;
             padding: 20px;
             margin: auto;
-            
+
             img{
                 width: 100%; height: auto;
-                
+
                 -webkit-filter: grayscale(100%);
                 -moz-filter: grayscale(100%);
                 filter: grayscale(100%);
-                
+
                 transition: all 0.3s ease-out;
-                
+
                 &:hover{
                     -webkit-filter: grayscale(0%);
                     -moz-filter: grayscale(0%);
